# MinecraftWeekend

./: .gitignore  CMakeLists.txt  README.md
cmake/: FetchCGLM.cmake  FetchGLFW.cmake
src/: main.c  state.h
src/block/: air.c  block.c  block.h  buttercup.c  clay.c  coal.c  cobblestone.c  copper.c  dirt.c  glass.c  grass.c  gravel.c  lava.c  leaves.c  log.c  pineleaves.c  pinelog.c  planks.c  podzol.c  rose.c  sand.c  shrub.c  snow.c  stone.c  tallgrass.c  torch.c  water.c
src/entity/: blocklook.component.c  blocklook.component.h  c_blocklook.c  c_blocklook.h  c_camera.c  c_camera.h  c_control.c  c_control.h  c_debug.c  c_debug.h  c_light.c  c_light.h  c_movement.c  c_movement.h  c_physics.c  c_physics.h  c_position.c  c_position.h  camera.component.c  camera.component.h  control.component.c  control.component.h  debug.component.c  debug.component.h  ecs.c  ecs.h  ecscomponents.h  ecstypes.h  light.component.c  light.component.h  movement.component.c  movement.component.h  physics.component.c  physics.component.h  player.c  player.h  position.component.c  position.component.h
src/gfx/: blockatlas.c  blockatlas.h  renderer.c  renderer.h  shader.c  shader.h  texture.c  texture.h  vao.c  vao.h  vbo.c  vbo.h  window.c  window.h
src/ui/: crosshair.c  crosshair.h  hotbar.c  hotbar.h  ui.c  ui.h
src/util/: aabb.h  bitmap.h  camera.c  camera.h  color.c  color.h  direction.c  direction.h  fmath.c  fmath.h  ivec2.h  ivec2s.h  ivec3.h  ivec3s.h  sort.h  time.h  types.h  util.h  vec_op.h
src/world/: blockmesh.c  blockmesh.h  chunk.c  chunk.h  chunkmesh.c  chunkmesh.h  light.c  light.h  sky.c  sky.h  world.c  world.h
